chore: modernize codebase with Java 21 features (getFirst, switch) and fix raw type warnings